--- a/neovim/.luarc.json
+++ b/neovim/.luarc.json
@@ -8,7 +8,8 @@
         "format",
         "lsp",
         "presets",
-        "harpoon"
+        "harpoon",
+        "colorMyPencils"
     ],
     "diagnostics.disable": [
         "unused-local",
